[tool.poetry]
name = "YT Backend"
version = "0.1"
description = "Simple YT backend"
authors = ["Marek Nagy"]
license = ""

[tool.poetry.dependencies]
python = "3.11.*"
flask = "^3.0.3"
pytube = "^15.0.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"